[project]
name = "h2oplus"
version = "0.1.0"
description = "Runtime environment for H2O+ experiments."
requires-python = "==3.11.14"
dependencies = [
    "absl-py>=2.4.0",
    "click>=8.4.1",
    "cloudpickle>=3.1.2",
    "cython==0.29.37",
    "d4rl==1.1",
    "dm-control>=1.0.41",
    "fasteners>=0.20",
    "glfw>=2.10.0",
    "gym==0.22.0",
    "gym-notices>=0.1.0",
    "h5py==3.11.0",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "mjrl @ git+https://github.com/aravindr93/mjrl.git",
    "ml-collections>=1.1.0",
    "mujoco-py==2.1.2.14",
    "numpy==1.24.4",
    "pandas>=2.2.3",
    "patchelf>=0.17.2.4",
    "pillow>=12.2.0",
    "pybullet>=3.2.7",
    "pyyaml>=6.0.3",
    "termcolor>=3.3.0",
    "tmuxp>=1.68.0",
    "torch==2.7.0",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]

[tool.uv]
package = false
required-version = ">=0.11.7"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
